Improve gradle build setup and remove use of deprecated java